<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">quizClient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register">register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="user_name">User name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="student_number">Student Number</string>
    <string name="submit">Submit</string>
    <string name="title_activity_quiz_list">QuizListActivity</string>
    <string name="quiz_taken">Quiz Taken</string>
    <string name="quiz_avaliable">Quiz Avaliable</string>
    <string name="title_activity_question">QuestionActivity</string>

</resources>
